# windows_managers_view

./: .gitignore  README.md  main.spec  requirements.txt
src/: main.py
src/core/: app_singleton.py  capture_exaple.py  hikvision_manager.py  locking_windows.py  run_controller.py  window_capture.py  window_controller.py  window_global.py  windows_detector.py
src/core/network/: jarvis_api.py  socket_client.py
src/core/state_global/: hwnd.py
src/gui/: windows_main.py
src/gui/components/: SplashScreen.py  add_device_dialog.py  box_image.py  custom_status_bar.py  device_list.py  modal_msm.py  window_bar.py
src/gui/components/conten_center/: center_layaut.py
src/gui/components/custon_btn/: btn_footer.py
src/gui/components/custon_label/: interactive_imageLabel.py
src/gui/components/render_box/: render_box.py
src/gui/components/sidebar/: sidebar_dock.py
src/gui/components/title_bar/: styles.qss  window_bar.py
src/gui/styles/: global.qss
src/model/: settings_model.py
src/model/windows/: __init__.py  list_windows.py
src/native/: .bat  CMakeLists.txt  capture.cpp
src/utils/files/: print_png.py
src/workers/: capture_woker.py
test/: test.py
